bgdk/base/deployment.yaml
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgd
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: v1
      volumes:
      - name: v1
        persistentVolumeClaim:
         claimName: demo
---
